--- a/gamble/home.html
+++ b/gamble/home.html
@@ -43,7 +43,7 @@
                     <li id="23-30Dec"><a href="#">23-30 December Wide</a></li>
                 </ul>
     </div>-->
-    <label for="startDate">Start Date:</label>
+    <label id="startDateLabel">Start Date:</label>
     <input type="date" id="startDate" name="startDate">
     <label for="endDate">End Date:</label>
     <input type="date" id="endDate" name="endDate">
