--- a/gamble/home.html
+++ b/gamble/home.html
@@ -43,6 +43,8 @@
                     <li id="23-30Dec"><a href="#">23-30 December Wide</a></li>
                 </ul>
     </div>-->
+    <li id="25-31"><a href="#">25-31 September</a></li>
+
     <label id="startDateLabel">Start Date:</label>
     <input type="date" id="startDate" name="startDate">
     <label for="endDate">End Date:</label>
