--- a/gamble/home.html
+++ b/gamble/home.html
@@ -23,7 +23,7 @@
     <label for="endDate">End Date:</label>
     <input type="date" id="endDate" name="endDate">
     <br>
-    <button id="bringMatches" onclick="bringMatches()" type="button">Bring Matches!</button>
+    <button class="btn btn-info" id="bringMatches" onclick="bringMatches()" type="button">Bring Matches!</button>
     <p id="p1">Please select the date range to see the matches</p>
   </div>
   <div id="container" class="col-md-9"></div>
@@ -161,7 +161,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <span class="col-md-1 text-center"> <input class="btn btn-info" id="filter" type="button" value="Filter" /></span>
+          <span class="col-md-1 text-center"> <input class="btn btn-info" onclick="filter()" id="filter" type="button" value="Filter" /></span>
           <span class="col-md-1 text-center"> <input class="btn btn-primary" id="reset" type="button" value="Reset" /></span>
           <span class="col-md-1 text-center"> <input class="btn btn-warning" id="clear" type="button" value="Clear" /></span>
         </div>
