--- a/gamble/home.html
+++ b/gamble/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Home Page</title>
@@ -15,6 +16,7 @@
   <link rel="stylesheet" href="main.css">
   <script src="controller.js"></script>
 </head>
+
 <body>
   <div class="col-md-9">
     <div class="row"></div>
@@ -161,7 +163,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <span class="col-md-1 text-center"> <input class="btn btn-info" onclick="filter()" id="filter" type="button" value="Filter" /></span>
+          <span class="col-md-1 text-center"> <button class="btn btn-info" id="bringMatches" onclick="filter()" type="button">Filter</button></span>
           <span class="col-md-1 text-center"> <input class="btn btn-primary" id="reset" type="button" value="Reset" /></span>
           <span class="col-md-1 text-center"> <input class="btn btn-warning" id="clear" type="button" value="Clear" /></span>
         </div>
