--- a/gamble/home.html
+++ b/gamble/home.html
@@ -163,7 +163,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <span class="col-md-1 text-center"> <button class="btn btn-info" id="bringMatches" onclick="filter()" type="button">Filter</button></span>
+          <span class="col-md-1 text-center"> <button class="btn btn-info" id="filter" onclick="filter()" type="button">Filter</button></span>
           <span class="col-md-1 text-center"> <input class="btn btn-primary" id="reset" type="button" value="Reset" /></span>
           <span class="col-md-1 text-center"> <input class="btn btn-warning" id="clear" type="button" value="Clear" /></span>
         </div>
